--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -30,7 +30,7 @@
 	<div class="row">
 		{% for page in languagelistimg %}
 			{% if page.display_as == "chart_type" %}
-							<a href="{{ site.baseurl }}/{{page.permalink}}">
+							<a href="/{{page.permalink}}">
 									<div class="alltutcol">
 										<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 										<div class="titlecenter">
@@ -49,7 +49,7 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.display_as == "multiple_axes" %}
-						<a href="{{ site.baseurl }}/{{page.permalink}}">
+						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
 								<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
@@ -67,7 +67,7 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.display_as == "streaming" %}
-						<a href="{{ site.baseurl }}/{{page.permalink}}">
+						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
 								<img class="thumbnail" alt="{{page.name}}" src="{{ site.baseurl }}{{page.thumbnail}}" >
 								<div class="titlecenter">
@@ -90,7 +90,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "layout_opt" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -102,7 +102,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "file_settings" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -114,7 +114,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "tutorial" %}
-				<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			{% endfor %}
 			</ul>
@@ -126,7 +126,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.display_as == "showcase" %}
-						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
@@ -138,7 +138,7 @@
 			<ul class="no-list-style">
 			{% for page in languagelist %}
 				{% if page.display_as == "callbacks" %}
-					<li class="no-list-style"><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+					<li class="no-list-style"><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 				{% endif %}
 			</ul>
 			{% endfor %}
@@ -150,7 +150,7 @@
 			<ul class="no-list-style">
 				{% for page in languagelist %}
 					{% if page.display_as == "get_request" %}
-						<li><a class="no-list-style" href="{{ site.baseurl }}/{{page.permalink}}">{{page.name}}</a></li>
+						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
