--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,5 +1,5 @@
 <div class="navigation-bar">
-<p class="align-left padding_left_small"><a href="{{ site.baseurl }}"> API Libraries / </a><a href="{{ site.baseurl }}/{% if page.permalink contains 'javascript-graphing-library' %}javascript-graphing-library{% else %}{{page.language}}{% endif %}" {% if page.layout == "langindex" %} id="nav-not-active" {% endif %} >{% if page.language == "plotly_js" %}Javascript Graphing Library{% else %}{{page.language | capitalize}}{% endif %} / </a>{{page.name}}</p>
+<p class="align-left padding_left_small"><a href="{{ site.baseurl }}"> API Libraries / </a><a href="/{% if page.permalink contains 'javascript-graphing-library' %}javascript-graphing-library{% else %}{{page.language}}{% endif %}" {% if page.layout == "langindex" %} id="nav-not-active" {% endif %} >{% if page.language == "plotly_js" %}Javascript Graphing Library{% else %}{{page.language | capitalize}}{% endif %} / </a>{{page.name}}</p>
 	<div class="float-right padding_right_small">
 		<a id="forklink" href="https://github.com/plotly">Fork on GitHub</a>
 	</div>
