--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,12 @@
   	
     	
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="/css/state.css">
-	<link rel="stylesheet" type="text/css" href="/css/api_docs.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/base.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/state.css">
+	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/api_docs.css">
 
 	<!-- Icon -->
 	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
