--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,15 +7,15 @@
   	
     	
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/base.css">
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/state.css">
-	<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/css/api_docs.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/base.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/state.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/api_docs.css">
 
 	<!-- Icon -->
-	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="{{site.baseurl}}/images/plotly-ico.png" type="image/x-icon" />
 	 
 	<!-- META TAGS -->
 	{% include seo.html %}
