--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -32,7 +32,7 @@
 			{% if page.display_as == "chart_type" %}
 							<a href="/{{page.permalink}}">
 									<div class="alltutcol">
-										<img class="thumbnail" alt="{{page.name}}" src="{{site.baseurl}}{{page.thumbnail}}" >
+										<img class="thumbnail" alt="{{page.name}}" src="{{site.oldurl}}{{page.thumbnail}}" >
 										<div class="titlecenter">
 													<h5 class="centered"> {{page.name}} </h5>
 										</div>
@@ -51,7 +51,7 @@
 				{% if page.display_as == "multiple_axes" %}
 						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" alt="{{page.name}}" src="{{site.baseurl}}{{page.thumbnail}}" >
+								<img class="thumbnail" alt="{{page.name}}" src="{{site.oldurl}}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
@@ -69,7 +69,7 @@
 				{% if page.display_as == "streaming" %}
 						<a href="/{{page.permalink}}">
 							<div class="alltutcol">
-								<img class="thumbnail" alt="{{page.name}}" src="{{site.baseurl}}{{page.thumbnail}}" >
+								<img class="thumbnail" alt="{{page.name}}" src="{{site.oldurl}}{{page.thumbnail}}" >
 								<div class="titlecenter">
 											<h5 class="centered"> {{page.name}} </h5>
 								</div>
