--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,21 @@
     <head>
 
 	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
     <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
   	
     	
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/base.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/state.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/api_docs.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">
 
 	<!-- Icon -->
-	<link rel="shortcut icon" href="{{site.baseurl}}/images/plotly-ico.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
 	 
 	<!-- META TAGS -->
 	{% include seo.html %}
