--- a/all_static/css/api_docs.css
+++ b/all_static/css/api_docs.css
@@ -25,7 +25,9 @@ iframe{
 }	
 	
 .border{
-	border: 1px solid #ccc;}
+	border: 1px solid #ccc;
+	background-color: #ffffff;
+}
   
 .auto-eg-padding{
 	padding-top: 20px;
