--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,8 @@
 	{% include seo.html %}
 	
 	<!-- code highlighting -->
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.6/styles/default.min.css">
-	<script src="//cdn.jsdelivr.net/highlight.js/8.6/highlight.min.js"></script>
+	<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/color-brewer.css">
+	<script src="{{site.staticurl}}/javascripts/codehighlight/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 
 	</head>
