Highlights same as before

--- a/all_static/javascripts/codehighlight/styles/tomorrow.css
+++ b/all_static/javascripts/codehighlight/styles/tomorrow.css
@@ -1,8 +1,9 @@
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 
 /* Tomorrow Comment */
-.hljs-comment {
-  color: #8e908c;
+.hljs-comment,
+.hljs-title {
+  color: #7f7f7f;
 }
 
 /* Tomorrow Red */
@@ -18,7 +19,7 @@
 .css .hljs-id,
 .css .hljs-class,
 .css .hljs-pseudo {
-  color: #c82829;
+  color: #d62728;
 }
 
 /* Tomorrow Orange */
@@ -29,13 +30,13 @@
 .hljs-literal,
 .hljs-params,
 .hljs-constant {
-  color: #f5871f;
+  color: #ff7f0e;
 }
 
 /* Tomorrow Yellow */
 .ruby .hljs-class .hljs-title,
-.css .hljs-rule .hljs-attribute {
-  color: #eab700;
+.css .hljs-rules .hljs-attribute {
+  color: #eac54c;
 }
 
 /* Tomorrow Green */
@@ -43,16 +44,14 @@
 .hljs-value,
 .hljs-inheritance,
 .hljs-header,
-.hljs-name,
 .ruby .hljs-symbol,
 .xml .hljs-cdata {
-  color: #718c00;
+  color: #447adb;
 }
 
 /* Tomorrow Aqua */
-.hljs-title,
 .css .hljs-hexcolor {
-  color: #3e999f;
+  color: #17becf;
 }
 
 /* Tomorrow Blue */
@@ -64,22 +63,39 @@
 .perl .hljs-sub,
 .javascript .hljs-title,
 .coffeescript .hljs-title {
-  color: #4271ae;
+  color: #447adb;
 }
 
 /* Tomorrow Purple */
 .hljs-keyword,
 .javascript .hljs-function {
-  color: #8959a8;
+  color: #8d4fbd;
 }
 
 .hljs {
   display: block;
-  overflow-x: auto;
-  background: white;
-  color: #4d4d4c;
-  padding: 0.5em;
-  -webkit-text-size-adjust: none;
+  /*background-color:#ffffff;*/
+  /*color: #4d4d4c;*/
+  /*padding: 0.5em;*/
+  font-family: 'Ubuntu Mono', sans-serif;
+  /*font-size:10.5pt;*/
+  /*margin: 0 0 0 0;*/
+  /*-moz-border-radius: 5px;*/
+  /*border-radius: 5px;*/
+  /*border-width:1px;*/
+  /*border-style:solid;*/
+  /*border-color:rgba(0,0,0,0.2);*/
+  /*text-align: left;*/
+  /*margin-bottom:5px;*/
+  /*margin-top:5px;*/
+}
+
+code.hljs{
+  display: inline;
+  padding: 0.2em;
+  /*font-size:11pt;*/
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
 .coffeescript .javascript,
@@ -90,4 +106,8 @@
 .xml .css,
 .xml .hljs-cdata {
   opacity: 0.5;
+}
+
+.nocolor{
+  color:#4d4d4c!important;
 }
