--- a/all_static/javascripts/codehighlight/styles/tomorrow.css
+++ b/all_static/javascripts/codehighlight/styles/tomorrow.css
@@ -74,7 +74,7 @@
 
 .hljs {
   display: block;
-  /*background-color:#ffffff;*/
+  background-color:#ffffff;
   /*color: #4d4d4c;*/
   /*padding: 0.5em;*/
   font-family: 'Ubuntu Mono', sans-serif;
@@ -82,7 +82,7 @@
   /*margin: 0 0 0 0;*/
   /*-moz-border-radius: 5px;*/
   /*border-radius: 5px;*/
-  /*border-width:1px;*/
+  border-width: 0px;
   /*border-style:solid;*/
   /*border-color:rgba(0,0,0,0.2);*/
   /*text-align: left;*/
@@ -91,7 +91,7 @@
 }
 
 code.hljs{
-  display: inline;
+  display: inline-block;
   padding: 0.2em;
   /*font-size:11pt;*/
   -moz-border-radius: 5px;
