--- a/all_static/css/base.css
+++ b/all_static/css/base.css
@@ -371,8 +371,8 @@ code {
   margin: 0 .2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
+  background: #FFFFFF;
+  border: 0px;
   border-radius: 4px; }
 pre > code {
   display: block;
