--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -8,7 +8,7 @@
 	{% assign pyclass = "lang_nav_act" %}
 {% elsif page.language contains "matlab" %}
 	{% assign matclass = "lang_nav_act" %}
-{% elsif page.language contains "r" %}
+{% elsif page.language == "r" %}
 	{% assign rclass = "lang_nav_act" %}
 {% elsif page.url contains "nodejs" %}
 	{% assign nodejsclass = "lang_nav_act" %}
