Streaming link update

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.display_as == "streaming" %}
-						<a href="/{{page.permalink}}">
+						<a href="https://plot.ly/streaming/">
 							<div class="alltutcol">
 								<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
 								<div class="titlecenter">
