plotly_js title update

--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -11,7 +11,7 @@
 			<div class="row">
 			<div class="getstartarea">
 			
-			<h1>{{page.name}} in {{page.language | capitalize}}</h1>
+			<h1>{{page.name}} in {% if page.language == "plotly_js" %}Plotly's JavaScript Graphing Library {% else %}{{page.language | capitalize}}{% endif %}</h1>
 			{% include lang-navigation.html %}
 			
 	
