Add .embed to iframe examples to prevent redirect

--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -17,7 +17,7 @@
 				</div>
 				<div class="six columns">
 					<div class="border">
-						<iframe src="{{ example.plot_url }}" style="width: 100%; height: 550px; border: none;"></iframe>
+						<iframe src="{{ example.plot_url }}.embed" style="width: 100%; height: 550px; border: none;"></iframe>
 					</div>
 				</div>
 			</div>
