--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,5 +70,9 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], processEsc
 
 	<!-- Image Hover Script -->
   	<script src="{{site.staticurl}}/javascripts/imghover.js"></script>
+	
+	<!-- code highlighting -->
+	<script src="{{site.staticurl}}/javascripts/codehighlight/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 
 
