--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -11,7 +11,7 @@
 			<div class="row">
 			<div class="getstartarea">
 			
-			<h1>{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% else %}{{page.language | capitalize}}{% endif %}</h1>
+			<h1>{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% else %}{{page.language | capitalize}}{% endif %}</h1>
 			{% include lang-navigation.html %}
 			
 	
