--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -40,10 +40,10 @@
 		<div class="lang_nav_button-div"><a class="lang_nav_button {{juliaclass}}" href="/julia{{page_type}}"><img src="{{ site.staticurl }}/images/julia.png" alt="julia" class="lang_nav_thum">JULIA</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "matplotlib" %}
-		<div class="lang_nav_button-div"><a class="lang_nav_button {{matplotclass}}" href="/matplotlib{{page_type}}"><img src="{{ site.staticurl }}/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">MATPLOTLIB</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{matplotclass}}" href="/matplotlib{{page_type}}"><img src="{{ site.staticurl }}/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">matplotlib</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "ggplot2" %}
-		<div class="lang_nav_button-div"><a class="lang_nav_button {{ggplotclass}}" href="/ggplot2{{page_type}}"><img src="{{ site.staticurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">GGPLOT2</a></div>
+		<div class="lang_nav_button-div"><a class="lang_nav_button {{ggplotclass}}" href="/ggplot2{{page_type}}"><img src="{{ site.staticurl }}/images/ggplot.png" alt="ggplot2" class="lang_nav_thum">ggplot2</a></div>
 	{% endif %}
 	{% if page.permalink contains {{page_type}} and page.language == "plotly_js" %}
 		<div class="lang_nav_button-div"><a class="lang_nav_button {{plotjsclass}}" href="/javascript-graphing-library{{page_type}}">{ } plotly.js</a></div>
