--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
 		
 	<div class="sectionseparator_bg">
 		<div class="bigcontainer">
-			<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% else %}{{page.language | capitalize}}{% endif %}</h1>
+			<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
 			{% include lang-navigation.html %}
 			
 			<div class="row">
