getting-started page styling

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -853,10 +853,13 @@ GETTING STARTED STYLING
 	border: 1px solid #ccc;
 	background-color: #ffffff;
 	text-align: left;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	
 }
 .content-box p{
-	margin-bottom: 0px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 }
 
 .content-box code{
