--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -7,7 +7,7 @@
 			<div class="row">
 				<div class="six columns">
 					<div class="z-depth-1">
-						<pre><code >{{ example.content }}</code></pre>
+						<pre><code class="{{page.language}}">{{ example.content }}</code></pre>
 					</div>
 					{% if example.description %}
 						<blockquote>
