--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,27 +1,34 @@
     <head>
 
-	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
-  	
-    	
-	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
-	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">
+        <meta charset="utf-8" />
 
-	<!-- Icon -->
-	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
-	 
-	<!-- META TAGS -->
-	{% include seo.html %}
-	
-	<!-- code highlighting -->
-	<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/tomorrow.css">
+    	<!-- Fonts -->
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
+
+
+    	<!-- Stytlesheets -->
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
+    	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
+
+        {% if page.page_type == "ipython" %}
+        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/ipython_notebook.css">
+        {% else %}
+        <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/api_docs.css">
+        {% endif %}
+
+    	<!-- Icon -->
+    	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
+
+    	<!-- META TAGS -->
+    	{% include seo.html %}
+
+    	<!-- code highlighting -->
+    	<link rel="stylesheet" href="{{site.staticurl}}/javascripts/codehighlight/styles/tomorrow.css">
 
 
 	</head>
