User guide styling

--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -117,6 +117,9 @@ PAGE-WIDE SECTION LAYOUT
 .sectionseparator_bg{
 	background-color: #F8F8F9;
 }
+.sectionseparator_white{
+	    background-color: #FFFFFF;
+}
 
 /************************
 TUTORIAL BLOCKS
