--- a/all_static/javascripts/codehighlight/styles/tomorrow.css
+++ b/all_static/javascripts/codehighlight/styles/tomorrow.css
@@ -74,7 +74,7 @@
 
 .hljs {
   display: block;
-  background-color:#ffffff;
+/*  background-color:#ffffff; */
   /*color: #4d4d4c;*/
   /*padding: 0.5em;*/
   font-family: 'Ubuntu Mono', sans-serif;
