JS callbacks page and 404 page fix

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,20 +2,22 @@
 <html>
 	{% include head.html %}
 	<body>
-    {% include header.html %}
-	{% include navigation-bar.html %}
+	<div class="allcontent">
+		{% include header.html %}
+		{% include navigation-bar.html %}
 		
-	<div class="sectionseparator_bg">
-		<div class="bigcontainer">
-			<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
-			{% include lang-navigation.html %}
-			
-			<div class="row">
-			
-			
-	
-			{{ content }}
-			
+		<div class="sectionseparator_bg">
+			<div class="bigcontainer">
+				<h1 class="centered">{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
+				{% include lang-navigation.html %}
+				
+				<div class="row">
+				
+				
+		
+				{{ content }}
+				
+				</div>
 			</div>
 		</div>
 	</div>
