--- a/_layouts/langindex.html
+++ b/_layouts/langindex.html
@@ -3,18 +3,20 @@
 	{% include head.html %}
 	
 	<body>
-    {% include header.html %}
-	
-	{% include navigation-bar.html %}
-	<div class="sectionseparator_bg">
-		
+		<div class="allcontent">
+			{% include header.html %}
+			
+			{% include navigation-bar.html %}
+			<div class="sectionseparator_bg">
+				
 
-		<div class="container">
-			{{ content }}
-			
-			
+				<div class="container">
+					{{ content }}
+					
+					
+				</div>
+			</div>
 		</div>
-	</div>
     {% include footer.html %}
 	</body>
 	
