--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -242,3 +242,27 @@ GETTING STARTED AREA
 .getstartarea .section{
 	margin: 21px 0px;
 }
+/*************************
+STICKY FOOTER
+*************************/
+* {
+  margin: 0;
+}
+html, body {
+  height: 100%;
+}
+.allcontent {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -274px; 
+}
+.allcontent:after {
+  content: "";
+  display: block;
+}
+.plotly-footer, .allcontent:after {
+  height: 274px; 
+}
+
+
+
