--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+<div class="plotly-footer">
 	<div class="row footerarea footer-top">
 		<div class="one column footcolumn space"> </div>
 		<div class="two columns footcolumn respfooter">
@@ -58,7 +59,7 @@
 		
 		
 	</div>
-
+</div>
 </footer>
 
 
