--- a/_layouts/getstart-base.html
+++ b/_layouts/getstart-base.html
@@ -2,25 +2,27 @@
 <html>
 	{% include head.html %}
 	<body>
-    {% include header.html %}
-	{% include navigation-bar.html %}
-		
-	<div class="sectionseparator_bg">
-		<div class="container">
+		<div class="allcontent">
+			{% include header.html %}
+			{% include navigation-bar.html %}
+				
+			<div class="sectionseparator_bg">
+				<div class="container">
+					
+					<div class="row">
+					<div class="getstartarea">
+					
+					<h1>{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
+					{% include lang-navigation.html %}
+					
 			
-			<div class="row">
-			<div class="getstartarea">
-			
-			<h1>{{page.name}} in {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %}</h1>
-			{% include lang-navigation.html %}
-			
-	
-			{{ content }}
-			
-			</div>
+					{{ content }}
+					
+					</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
     {% include footer.html %}
 	</body>
 </html>
