--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -2,20 +2,22 @@
 <html>
 	{% include head.html %}
 	<body>
-    {% include header.html %}
-	{% include navigation-bar.html %}
+	<div class="allcontent">
+		{% include header.html %}
+		{% include navigation-bar.html %}
+			
+		<div class="sectionseparator_bg">
+			<div class="container">
+				
+				<div class="row">
+				<div class="getstartarea">
+				
+				
 		
-	<div class="sectionseparator_bg">
-		<div class="container">
-			
-			<div class="row">
-			<div class="getstartarea">
-			
-			
-	
-			{{ content }}
-			
-			</div>
+				{{ content }}
+				
+				</div>
+				</div>
 			</div>
 		</div>
 	</div>
