--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -7,25 +7,27 @@
 	</head>
 	
 	<body>
-    {% include header.html %}
-	{% include navigation-bar.html %}
-		
-	<div class="sectionseparator_white">
-		<div class="container">
-			
-			<div class="row">
-			<div class="getstartarea">
-			
-			<h1 class="centered">Plotly for {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %} - User Guide</h1>
+		<div class="allcontent">
+			{% include header.html %}
+			{% include navigation-bar.html %}
+				
+			<div class="sectionseparator_white">
+				<div class="container">
+					
+					<div class="row">
+					<div class="getstartarea">
+					
+					<h1 class="centered">Plotly for {% if page.language == "plotly_js" %}plotly.js{% elsif page.language == "ggplot2" %}ggplot2{% elsif page.language == "matlab" %}MATLAB{% elsif page.language == "matplotlib" %}matplotlib{% else %}{{page.language | capitalize}}{% endif %} - User Guide</h1>
 
-			
-				{{ content }}
-			
-			
-			</div>
+					
+						{{ content }}
+					
+					
+					</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
     {% include footer.html %}
 	</body>
 </html>
