title fix - getting started pages

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.display_as == "streaming" %}
-						<a href="https://plot.ly/streaming/">
+						{% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% else %}<a href="https://plot.ly/streaming/">{% endif %}
 							<div class="alltutcol">
 								<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
 								<div class="titlecenter">
@@ -120,8 +120,8 @@
 			</ul>
 		</div>
 {% endif %}
+{% if page.language == "plotly_js" %}<a class="no_underline" href="https://plot.ly/javascript-graphing-library/high-dimension-data/"><h3>Showcase</h3></a>{% endif %} 
 {% if showcase %}
-	<h3>Showcase</h3>
 		<div class="row">
 			<ul class="no-list-style">
 				{% for page in languagelist %}
