link to python streaming page from python index

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			{% for page in languagelistimg %}
 				{% if page.display_as == "streaming" %}
-						{% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% else %}<a href="https://plot.ly/streaming/">{% endif %}
+						{% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
 							<div class="alltutcol">
 								<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
 								<div class="titlecenter">
@@ -81,9 +81,6 @@
 		</div>
 {% endif %}
 
-
-
-
 {% if layout_options %}
 	<h3>Layout Options</h3>
 		<div class="row">
@@ -96,6 +93,7 @@
 			</ul>
 		</div>
 {% endif %}
+
 {% if file_settings %}
 	<h3>File Settings</h3>
 		<div class="row">
@@ -108,6 +106,7 @@
 			</ul>
 		</div>
 {% endif %}
+
 {% if tutorial %}
 	<h3>Tutorial</h3>
 		<div class="row">
@@ -120,30 +119,12 @@
 			</ul>
 		</div>
 {% endif %}
-{% if page.language == "plotly_js" %}<a class="no_underline" href="https://plot.ly/javascript-graphing-library/high-dimension-data/"><h3>Showcase</h3></a>{% endif %} 
-{% if showcase %}
-		<div class="row">
-			<ul class="no-list-style">
-				{% for page in languagelist %}
-					{% if page.display_as == "showcase" %}
-						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-		</div>
+{% if page.language == "plotly_js" %}
+	<a class="no_underline" href="https://plot.ly/javascript-graphing-library/showcase/"><h3>Showcase</h3></a>
+
+	<a class="no_underline" href="https://plot.ly/javascript-graphing-library/callbacks/"><h3>Callbacks</h3></a>
 {% endif %}
-{% if callbacks %}
-	<h3>Callbacks</h3>
-		<div class="row">
-			<ul class="no-list-style">
-			{% for page in languagelist %}
-				{% if page.display_as == "callbacks" %}
-					<li class="no-list-style"><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-				{% endif %}
-			</ul>
-			{% endfor %}
-		</div>
-{% endif %}
+
 {% if get_request %}
 	<h3>Get Requests, Static Image Export, and Interactive Embedding</h3>
 		<div class="row">
