IDs for sub-example links
added id so that all sub examples can be linked# id lowercased and
spaces replaced by -
format: sub-example-title

--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -30,9 +30,13 @@
 .white{
 	color: white;
 }
+.plot-blue{
+	color: #457bdc;	
+}
+
 .no-list-style{
 	list-style: none;
-	
+
 }
 .no-list-style li, .no-list-style a{
 	list-style: none;
@@ -71,4 +75,3 @@
 	.padding_right{
     padding-right: 20px;}
 }
-
