link update for ipython landing page

--- a/all_static/css/modules.css
+++ b/all_static/css/modules.css
@@ -72,13 +72,13 @@ cursor: pointer
 	width: 100%;
 	min-width: 150px;
 	}
-	
+
 	.headerbar-leftside {
 	margin-left: 20px;
 	max-width: 100px;
 	margin-right: 25px;
 	}
-	
+
 }
 
 /***********************
@@ -126,9 +126,9 @@ FOOTER STYLING
 
 @media (max-width: 550px) {
 	.footer-bottom li, .footer-bottom a, .footer-bottom p{
-	margin-top: 2px;	
+	margin-top: 2px;
 	margin: 0 0 10px 3px;}
-	
+
 }
 
 .footerarea a{
@@ -233,7 +233,7 @@ ALL TUTORIALS SECTION STYLING
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 100px;
+  min-height: 100px;
   padding-right: 8px;
   padding-left: 8px;
   padding-top: 0px;
@@ -505,7 +505,7 @@ CLIENT APIS Rollover styling
 	#pythonapi_text, #matlabapi_text, #r_api_text{
 	padding: 0px 0px;
 	}
-	
+
 }
 
 /* Larger than tablet */
@@ -538,7 +538,7 @@ CLIENT APIS Rollover styling
 	line-height: 21px;
 	}
 	.categories-apis h6{
-	font-size: 21px; 
+	font-size: 21px;
 	line-height: 27px;
 	}
 	.titlecenterapi{
@@ -557,7 +557,7 @@ CLIENT APIS Rollover styling
 	  line-height: 21px;
 	}
 	.categories-apis h6{
-	font-size: 21px; 
+	font-size: 21px;
 	line-height: 27px;
 	}
 	.titlecenterapi{
@@ -732,7 +732,7 @@ TIP BOX
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-radius: 5px;}
-	
+
 .tipbox img{
 	float: left;
 	padding-right: 20px;
@@ -827,7 +827,7 @@ LANGUAGE INDEX PAGE STYLING
 	clear: both;}
 .three-column-clear{
 	display: none;}
-	
+
 @media (max-width: 750px) {
 	.five-column-clear{
 		display: none;}
@@ -844,7 +844,7 @@ GETTING STARTED STYLING
 	margin-bottom: 10.5px;
 	line-height: 1.5;
 	font-size: 30px;
-	
+
 }
 
 .content-box{
@@ -855,7 +855,7 @@ GETTING STARTED STYLING
 	text-align: left;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	
+
 }
 .content-box p{
 	margin-bottom: 5px;
@@ -886,4 +886,3 @@ GETTING STARTED STYLING
 .terminal{
 
 }
-
