--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -21,7 +21,7 @@
         </div>
         <div class="six columns">
           <div class="border">
-            <iframe src="{{ example.plot_url }}.embed" style="width: 100%; height: 900px; border: none;"></iframe>
+            <iframe src="{{ example.plot_url }}.embed" style="width: 100%; height: {% if example.height %}{{example.height}}px;{% else %}550px;{% endif %} border: none;"></iframe>
           </div>
         </div>
       </div>
