minor updates to the user guide layout to improve responsiveness

--- a/all_static/css/userguide_style.css
+++ b/all_static/css/userguide_style.css
@@ -6118,10 +6118,10 @@ a.label:hover,a.label:focus,a.badge:hover,a.badge:focus {
 }
 
 @media (max-width:767px) {
-    body {
+/*    body {
         padding-left: 20px;
         padding-right: 20px;
-    }
+    }*/
 
     .navbar-fixed-top,.navbar-fixed-bottom,.navbar-static-top {
         margin-left: -20px;
@@ -9292,6 +9292,12 @@ p.p-space {
     margin: 1em 2em;
 }
 
+@media (max-width:767px){
+  .rendered_html blockquote {
+      margin: 1em 0;
+  }
+}
+
 .rendered_html table {
     margin-left: auto;
     margin-right: auto;
@@ -9422,16 +9428,24 @@ div#notebook_panel {
 div#notebook {
     font-size: 14px;
     line-height: 20px;
-    overflow-y: scroll;
-    overflow-x: auto;
     width: 100%;
-    padding: 1em 0 1em 4em;
+    padding: 1em 0 1em 5px;
     margin: 0;
-    border-top: 1px solid #ababab;
+    border-top: none;
     outline: none;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+}
+
+@media (max-width:767px) {
+    div#notebook {
+        border-top: none;
+        overflow-x: hidden;
+      }
+    .container{
+      padding: 0px;
+    }
 }
 
 div.ui-widget-content {
@@ -10159,7 +10173,7 @@ body {
 }
 
 div#notebook {
-    overflow: visible;
+    overflow-x: scroll
     border-top: none;
 }
 
@@ -10183,7 +10197,13 @@ div#notebook {
 div.cell {
     width: 850px;
         /*margin-left: 10% !important;
-        margin-right: auto;*/;
+        margin-right: auto;*/
+}
+
+@media (max-width:767px) {
+  div.cell {
+      width: 100%;
+  }
 }
 
 .text_cell_render h1 {
@@ -10250,6 +10270,12 @@ div.text_cell_render {
     margin-right: auto;
     text-align: justify;
     text-justify: inter-word;
+}
+
+@media (max-width:767px) {
+  div.text_cell_render {
+        width: 100%;
+  }
 }
 
 div.output_subarea.output_text.output_pyout {
@@ -10329,3 +10355,9 @@ blockquote p {
 
 .footer-bottom {
   padding: 20px 0 38px 0;}
+
+@media (max-width:767px) {
+    blockquote{
+        max-width: 90%;
+    }
+}
