made section self-ref link

--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -31,7 +31,10 @@
   color: white;
 }
 .plot-blue{
-	color: #457bdc;
+  color: #457bdc;
+}
+.plot-blue:hover{
+  color: #457bdc;
 }
 
 .no-list-style{
