--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -1,139 +1,143 @@
 {% for page in languagelistimg %}
-	{% if page.display_as == "chart_type" %}
-		{% assign chart_types = true %}
-	{% elsif page.display_as == "multiple_axes" %}
-		{% assign multiple_axes = true %}
-	{% elsif page.display_as == "streaming" %}
-		{% assign streaming = true %}
-	{% endif %}
+  {% if page.display_as == "chart_type" %}
+    {% assign chart_types = true %}
+  {% elsif page.display_as == "multiple_axes" %}
+    {% assign multiple_axes = true %}
+  {% elsif page.display_as == "streaming" %}
+    {% assign streaming = true %}
+  {% endif %}
 {% endfor %}
 
 {% for page in languagelist %}
-	{% if page.display_as == "layout_opt" %}
-		{% assign layout_options = true %}
-	{% elsif page.display_as == "file_settings" %}
-		{% assign file_settings = true %}
-	{% elsif page.display_as == "tutorial" %}
-		{% assign tutorial = true %}
-	{% elsif page.display_as == "showcase" %}
-		{% assign showcase = true %}
-	{% elsif page.display_as == "callbacks" %}
-		{% assign callbacks = true %}
-	{% elsif page.display_as == "get_request" %}
-		{% assign get_request = true %}
-	{% endif %}
+  {% if page.display_as == "layout_opt" %}
+    {% assign layout_options = true %}
+  {% elsif page.display_as == "file_settings" %}
+    {% assign file_settings = true %}
+  {% elsif page.display_as == "tutorial" %}
+    {% assign tutorial = true %}
+  {% elsif page.display_as == "showcase" %}
+    {% assign showcase = true %}
+  {% elsif page.display_as == "callbacks" %}
+    {% assign callbacks = true %}
+  {% elsif page.display_as == "get_request" %}
+    {% assign get_request = true %}
+  {% endif %}
 {% endfor %}
 
 
 {% if chart_types %}
-<h3>Chart Types</h3>
-	<div class="row">
-		{% for page in languagelistimg %}
-			{% if page.display_as == "chart_type" %}
-							<a href="/{{page.permalink}}">
-									<div class="alltutcol">
-										<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-										<div class="titlecenter">
-													<h5 class="centered"> {{page.name}} </h5>
-										</div>
-									</div>
-							</a>
-							<div class="{% cycle 'group 1': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
-			{% endif %}
-		{% endfor %}
-	</div>
+<h3 id="chart-types"><a class="no_underline plot-blue" href="#chart-types">Chart Types</a></h3>
+  <div class="row">
+    {% for page in languagelistimg %}
+      {% if page.display_as == "chart_type" %}
+              <a href="/{{page.permalink}}">
+                  <div class="alltutcol">
+                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                    <div class="titlecenter">
+                          <h5 class="centered"> {{page.name}} </h5>
+                    </div>
+                  </div>
+              </a>
+              <div class="{% cycle 'group 1': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+      {% endif %}
+    {% endfor %}
+  </div>
 {% endif %}
 
 {% if multiple_axes %}
-	<h3>Multiple Axes, Subplots, and Insets</h3>
-		<div class="row">
-			{% for page in languagelistimg %}
-				{% if page.display_as == "multiple_axes" %}
-						<a href="/{{page.permalink}}">
-							<div class="alltutcol">
-								<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-								<div class="titlecenter">
-											<h5 class="centered"> {{page.name}} </h5>
-								</div>
-							</div>
-						</a>
-						<div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
-				{% endif %}
-			{% endfor %}
-		</div>
+  <h3 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h3>
+    <div class="row">
+      {% for page in languagelistimg %}
+        {% if page.display_as == "multiple_axes" %}
+            <a href="/{{page.permalink}}">
+              <div class="alltutcol">
+                <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                <div class="titlecenter">
+                      <h5 class="centered"> {{page.name}} </h5>
+                </div>
+              </div>
+            </a>
+            <div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+        {% endif %}
+      {% endfor %}
+    </div>
 {% endif %}
 {% if streaming %}
-	<h3>Streaming</h3>
-		<div class="row">
-			{% for page in languagelistimg %}
-				{% if page.display_as == "streaming" %}
-						{% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
-							<div class="alltutcol">
-								<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-								<div class="titlecenter">
-											<h5 class="centered"> {{page.name}} </h5>
-								</div>
-							</div>
-						</a>
-						<div class="{% cycle 'group 3': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
-				{% endif %}
-			{% endfor %}
-		</div>
+  <h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
+    <div class="row">
+      {% for page in languagelistimg %}
+        {% if page.display_as == "streaming" %}
+            {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
+              <div class="alltutcol">
+                <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                <div class="titlecenter">
+                      <h5 class="centered"> {{page.name}} </h5>
+                </div>
+              </div>
+            </a>
+            <div class="{% cycle 'group 3': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+        {% endif %}
+      {% endfor %}
+    </div>
 {% endif %}
 
 {% if layout_options %}
-	<h3>Layout Options</h3>
-		<div class="row">
-			<ul class="no-list-style">
-			{% for page in languagelist %}
-				{% if page.display_as == "layout_opt" %}
-				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-				{% endif %}
-			{% endfor %}
-			</ul>
-		</div>
+  <h3 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h3>
+    <div class="row">
+      <ul class="no-list-style">
+      {% for page in languagelist %}
+        {% if page.display_as == "layout_opt" %}
+        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+        {% endif %}
+      {% endfor %}
+      </ul>
+    </div>
 {% endif %}
 
 {% if file_settings %}
-	<h3>File Settings</h3>
-		<div class="row">
-			<ul class="no-list-style">
-			{% for page in languagelist %}
-				{% if page.display_as == "file_settings" %}
-				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-				{% endif %}
-			{% endfor %}
-			</ul>
-		</div>
+  <h3 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h3>
+    <div class="row">
+      <ul class="no-list-style">
+      {% for page in languagelist %}
+        {% if page.display_as == "file_settings" %}
+        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+        {% endif %}
+      {% endfor %}
+      </ul>
+    </div>
 {% endif %}
 
 {% if tutorial %}
-	<h3>Tutorial</h3>
-		<div class="row">
-			<ul class="no-list-style">
-			{% for page in languagelist %}
-				{% if page.display_as == "tutorial" %}
-				<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-				{% endif %}
-			{% endfor %}
-			</ul>
-		</div>
+  <h3 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h3>
+    <div class="row">
+      <ul class="no-list-style">
+      {% for page in languagelist %}
+        {% if page.display_as == "tutorial" %}
+        <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+        {% endif %}
+      {% endfor %}
+      </ul>
+    </div>
 {% endif %}
 {% if page.language == "plotly_js" %}
-	<a class="no_underline" href="https://plot.ly/javascript-graphing-library/showcase/"><h3>Showcase</h3></a>
-
-	<a class="no_underline" href="https://plot.ly/javascript-graphing-library/callbacks/"><h3>Callbacks</h3></a>
+  <h3 id="showcase-callbacks"><a class="no_underline plot-blue" href="#showcase-callbacks">Showcase and Callbacks</a></h3>
+    <div class="row">
+      <ul class="no-list-style">
+        <li><a class="no-list-style" href="https://plot.ly/javascript-graphing-library/showcase/">Showcase</a></li>
+        <li><a class="no-list-style" href="https://plot.ly/javascript-graphing-library/callbacks/">Callbacks</a></li>
+      </ul>
+    </div>
 {% endif %}
 
 {% if get_request %}
-	<h3>Get Requests, Static Image Export, and Interactive Embedding</h3>
-		<div class="row">
-			<ul class="no-list-style">
-				{% for page in languagelist %}
-					{% if page.display_as == "get_request" %}
-						<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-		</div>
+  <h3 id="get-requests-static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Get Requests, Static Image Export, and Interactive Embedding</a></h3>
+    <div class="row">
+      <ul class="no-list-style">
+        {% for page in languagelist %}
+          {% if page.display_as == "get_request" %}
+            <li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
 {% endif %}
