remove commas in heading links

--- a/_includes/auto_examples.html
+++ b/_includes/auto_examples.html
@@ -3,9 +3,9 @@
         <div class="row auto-eg-padding">
       <div class=" row twelve columns">
         {% if example.name contains '<code>'%}
-          <h3 id="{{ example.name | remove: '<code>' | remove: '</code>' | remove:'<br>' | replace:' ','-' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | remove: '<code>' | remove: '</code>' | remove:'<br>'| replace:' ','-' | downcase }}">{{ example.name }}</a></h3>
+          <h3 id="{{ example.name | remove: '<code>' | remove: '</code>' | remove:'<br>' | remove:',' | replace:' ','-' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | remove: '<code>' | remove: '</code>' | remove:',' | remove:'<br>'| replace:' ','-' | downcase }}">{{ example.name }}</a></h3>
         {% else%}
-          <h3 id="{{ example.name | replace:' ','-' | remove:'<br>' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:'<br>' | downcase }}">{{ example.name }}</a></h3>
+          <h3 id="{{ example.name | replace:' ','-' | remove:'<br>' | remove:',' | downcase }}"><a class="no_underline plot-blue" href="#{{ example.name | replace:' ','-' | remove:'<br>' | remove:',' | downcase }}">{{ example.name }}</a></h3>
         {% endif %}
       </div>
       <div class="row">
