--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -25,8 +25,65 @@
 {% endfor %}
 
 
-{% if chart_types %}
-<h3 id="chart-types"><a class="no_underline plot-blue" href="#chart-types">Chart Types</a></h3>
+{% if basic_charts %}
+<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Charts Package</a></h3>
+  <div class="row">
+    {% for page in languagelistimg %}
+      {% if page.display_as == "chart_type" %}
+              <a href="/{{page.permalink}}">
+                  <div class="alltutcol">
+                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                    <div class="titlecenter">
+                          <h5 class="centered"> {{page.name}} </h5>
+                    </div>
+                  </div>
+              </a>
+              <div class="{% cycle 'group 1': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if stats_charts %}
+<h3 id="stats-charts"><a class="no_underline plot-blue" href="#chart-types">Stats Charts Package</a></h3>
+  <div class="row">
+    {% for page in languagelistimg %}
+      {% if page.display_as == "chart_type" %}
+              <a href="/{{page.permalink}}">
+                  <div class="alltutcol">
+                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                    <div class="titlecenter">
+                          <h5 class="centered"> {{page.name}} </h5>
+                    </div>
+                  </div>
+              </a>
+              <div class="{% cycle 'group 1': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if bio_charts %}
+<h3 id="bio-charts"><a class="no_underline plot-blue" href="#bio-charts">Bio Charts Package</a></h3>
+  <div class="row">
+    {% for page in languagelistimg %}
+      {% if page.display_as == "chart_type" %}
+              <a href="/{{page.permalink}}">
+                  <div class="alltutcol">
+                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                    <div class="titlecenter">
+                          <h5 class="centered"> {{page.name}} </h5>
+                    </div>
+                  </div>
+              </a>
+              <div class="{% cycle 'group 1': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if 3d_charts %}
+<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">Bio Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "chart_type" %}
