--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -25,7 +25,7 @@
 {% endfor %}
 
 
-{% if basic_charts %}
+{% if chart_type %}
 <h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
