--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -1,6 +1,12 @@
 {% for page in languagelistimg %}
   {% if page.display_as == "chart_type" %}
-    {% assign chart_types = true %}
+    {% assign chart_type = true %}
+  {% elsif page.display_as == "stats_charts" %}
+    {% assign stats_charts = true %}    
+  {% elsif page.display_as == "bio_charts" %}
+    {% assign bio_charts = true %} 
+  {% elsif page.display_as == "3d_charts" %}
+    {% assign 3d_charts = true %}     
   {% elsif page.display_as == "multiple_axes" %}
     {% assign multiple_axes = true %}
   {% elsif page.display_as == "streaming" %}
