--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -54,7 +54,7 @@
 <h3 id="stats-charts"><a class="no_underline plot-blue" href="#chart-types">Stats Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
-      {% if page.display_as == "chart_type" %}
+      {% if page.display_as == "stats_charts" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
@@ -73,7 +73,7 @@
 <h3 id="bio-charts"><a class="no_underline plot-blue" href="#bio-charts">Bio Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
-      {% if page.display_as == "chart_type" %}
+      {% if page.display_as == "bio_charts" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
@@ -92,7 +92,7 @@
 <h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">Bio Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
-      {% if page.display_as == "chart_type" %}
+      {% if page.display_as == "3d_charts" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
