--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -89,7 +89,7 @@
 {% endif %}
 
 {% if 3d_charts %}
-<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">Bio Charts Package</a></h3>
+<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">3d Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "3d_charts" %}
