--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -2,6 +2,8 @@
   {% if page.display_as == "chart_type" %}
     {% assign chart_type = true %}
   {% elsif page.display_as == "stats_charts" %}
+    {% assign stats_charts = true %}   
+  {% elsif page.display_as == "maps" %}
     {% assign stats_charts = true %}    
   {% elsif page.display_as == "bio_charts" %}
     {% assign bio_charts = true %} 
@@ -54,6 +56,24 @@
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "stats_charts" %}
+              <a href="/{{page.permalink}}">
+                  <div class="alltutcol">
+                    <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
+                    <div class="titlecenter">
+                          <h5 class="centered"> {{page.name}} </h5>
+                    </div>
+                  </div>
+              </a>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endif %}
+
+{% if maps %}
+<h3 id="stats-charts"><a class="no_underline plot-blue" href="#chart-types">Maps Package</a></h3>
+  <div class="row">
+    {% for page in languagelistimg %}
+      {% if page.display_as == "maps" %}
               <a href="/{{page.permalink}}">
                   <div class="alltutcol">
                     <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
