--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -4,7 +4,7 @@
   {% elsif page.display_as == "stats_charts" %}
     {% assign stats_charts = true %}   
   {% elsif page.display_as == "maps" %}
-    {% assign stats_charts = true %}    
+    {% assign maps = true %}    
   {% elsif page.display_as == "bio_charts" %}
     {% assign bio_charts = true %} 
   {% elsif page.display_as == "3d_charts" %}
