--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -52,7 +52,7 @@
 {% endif %}
 
 {% if stats_charts %}
-<h3 id="stats-charts"><a class="no_underline plot-blue" href="#chart-types">Stats Charts Package</a></h3>
+<h3 id="stats-charts"><a class="no_underline plot-blue" href="#stats-charts">Stats Charts Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "stats_charts" %}
@@ -70,7 +70,7 @@
 {% endif %}
 
 {% if maps %}
-<h3 id="stats-charts"><a class="no_underline plot-blue" href="#chart-types">Maps Package</a></h3>
+<h3 id="maps-charts"><a class="no_underline plot-blue" href="#maps-charts">Maps Package</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "maps" %}
@@ -123,23 +123,6 @@
   </div>
 {% endif %}
 
-{% if multiple_axes %}
-  <h3 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h3>
-    <div class="row">
-      {% for page in languagelistimg %}
-        {% if page.display_as == "multiple_axes" %}
-            <a href="/{{page.permalink}}">
-              <div class="alltutcol">
-                <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-                <div class="titlecenter">
-                      <h5 class="centered"> {{page.name}} </h5>
-                </div>
-              </div>
-            </a>
-        {% endif %}
-      {% endfor %}
-    </div>
-{% endif %}
 {% if streaming %}
   <h3 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h3>
     <div class="row">
