--- a/_includes/documentation_eg_js.html
+++ b/_includes/documentation_eg_js.html
@@ -34,7 +34,7 @@
 
 
 {% if chart_type %}
-<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Charts Package</a></h3>
+<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Chart Types</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "chart_type" %}
@@ -52,7 +52,7 @@
 {% endif %}
 
 {% if stats_charts %}
-<h3 id="stats-charts"><a class="no_underline plot-blue" href="#stats-charts">Stats Charts Package</a></h3>
+<h3 id="stats-charts"><a class="no_underline plot-blue" href="#stats-charts">Stats Charts</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "stats_charts" %}
@@ -70,7 +70,7 @@
 {% endif %}
 
 {% if maps %}
-<h3 id="maps-charts"><a class="no_underline plot-blue" href="#maps-charts">Maps Package</a></h3>
+<h3 id="maps-charts"><a class="no_underline plot-blue" href="#maps-charts">Maps</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "maps" %}
@@ -88,7 +88,7 @@
 {% endif %}
 
 {% if bio_charts %}
-<h3 id="bio-charts"><a class="no_underline plot-blue" href="#bio-charts">Bio Charts Package</a></h3>
+<h3 id="bio-charts"><a class="no_underline plot-blue" href="#bio-charts">Bio Charts</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "bio_charts" %}
@@ -106,7 +106,7 @@
 {% endif %}
 
 {% if 3d_charts %}
-<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">3d Charts Package</a></h3>
+<h3 id="3d-charts"><a class="no_underline plot-blue" href="#3d-charts">3d Charts</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "3d_charts" %}
