--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -125,9 +125,10 @@ TUTORIAL BLOCKS
 ************************/
 
 .alltutcol {
-    width: 100%;
-    float: left;
-    box-sizing: border-box;
+  width: 100%;
+  max-width: 160px;
+  float: left;
+  box-sizing: border-box;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 20px;
