--- a/all_static/css/layout_block.css
+++ b/all_static/css/layout_block.css
@@ -154,6 +154,7 @@ TUTORIAL BLOCKS
 @media (min-width: 750px) {
   .alltutcol {
     width: 18%;
+    max-width: 160px;
     margin-left: 1%;
     margin-right: 1%;
     margin-top: 20px;
