--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -70,7 +70,7 @@
 {% endif %}
 
 {% if maps %}
-<h3 id="maps-charts"><a class="no_underline plot-blue" href="#maps-charts">Maps</a></h3>
+<h3 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "maps" %}
