--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -34,7 +34,7 @@
 
 
 {% if chart_type %}
-<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Chart Types</a></h3>
+<h3 id="basic-charts"><a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a></h3>
   <div class="row">
     {% for page in languagelistimg %}
       {% if page.display_as == "chart_type" %}
